--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
+/* use border-box by default, globally */
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+}
+
 body {
+  /* remove the tiny space around the edge of the page */
   margin: 0;
+
+  /* extend body to full viewport height */
+  min-height: 100vh;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +21,56 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+img {
+  /* limit width of images to their containers */
+  max-width: 100%;
+
+  /* autoscale images based on width, preserving aspect ratio */
+  height: auto;
+
+  /* prevent small gap below images */
+  vertical-align: bottom;
+}
+
+/* no default UA margin-top for text elements */
+h1, h2, h3, h4, h5, h6, p {
+   margin-top: 0;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* no list-markers by default, since lists are used more often for semantics */
+ul, ol {
+  list-style: none;
+}
+
+/* remove/improve UA button defaults, normalize across vendors */
+button, .button {
+  border: 0;
+  border-radius: 0.25rem;
+  font-family: system-ui, sans-serif;
+  font-size: 1rem;
+  line-height: 1.2;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem;
+  cursor: pointer;
+  user-select: none;
+}
+
+button:hover, button:focus {
+  filter: brightness(110%);
+}
+
+button:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
+
+button:active {
+  transform: scale(0.99);
 }
