--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,31 @@
   height: 100vh;
 }
 
+.Modal {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.Modal.open {
+  display: block;
+}
+
+.Modal-content {
+  position: absolute;
+  max-width: 600px;
+  width: 80vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem 3rem;
+  background: #fff;
+}
+
 .NavBar {
   background: #171717;
   flex: 0 0;
