Move App to LandingPage component; edit styles; add router and routes to App component

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
 
 /* Components */
 
-.App {
+.MainLayout {
   min-height: 600px;
   height: 100vh;
 }
@@ -100,7 +100,7 @@
   font-size: 18px;
 }
 
-.App-header {
+.LandingPage-header {
   position: relative;
   background-color: #242424;
   background:
@@ -119,7 +119,7 @@
   width: 60%;
 }
 
-.hero-text {
+.hero-section {
   position: absolute;
   color: #eee;
   margin: 0 3vw;
@@ -127,7 +127,7 @@
   width: 420px;
 }
 
-.hero-text h1 {
+.hero-section .hero-text {
   text-transform: uppercase;
   text-align: center;
   font-family: 'Bai Jamjuree', sans-serif;
@@ -139,7 +139,7 @@
   text-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
 }
 
-.hero-text .cta {
+.hero-section .cta {
   margin-top: 16px;
   position: relative;
   bottom: 0;
@@ -157,7 +157,7 @@
   align-self: center;
 }
 
-.hero-text .cta:hover {
+.hero-section .cta:hover {
   bottom: 6px;
   box-shadow:
     0px 10px 8px rgba(0, 0, 0, 0.5),
