Reenable font - testing

--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@
 
 .NavBar {
   background: #171717;
+  min-height: 65px;
   flex: 0 0;
   display: flex;
   user-select: none;
@@ -102,7 +103,7 @@
   border: 3px solid #171717;
   margin: 0.5rem 1.5rem;
   font-size: 40px;
-  /* font-family: 'Army', sans-serif; */
+  font-family: 'Army', sans-serif;
 }
 
 .NavBar-logo:hover {
