--- a/src/App.css
+++ b/src/App.css
@@ -252,6 +252,13 @@
 
 .ThankYouPage h1 {
   text-align: center;
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 768px) {
+  .ThankYouPage h1 {
+    font-size: 2rem;
+  }
 }
 
 /* Mailchimp embedded form styles */
